[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
byteorder = "1.4"
rc4 = { git = "https://github.com/rsdump/rc4" }